--- a/index.html
+++ b/index.html
@@ -15,11 +15,140 @@
 </head>
 <body>
     <!-- Header -->
+    <header class="header" id="header">
+        <nav class="navbar container">
+            <a href="index.html">
+                <h2 class="logo">NewFlash</h2>
+            </a>
 
+            <div class="menu" id="menu">
+                <ul class="list">
+                    <li class="list-item">
+                        <a href="#" class="list-link current">Home</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">Categories</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">Reviews</a>
+                    </li>
+                    <li class="list-item">  
+                        <a href="#" class="list-link">News</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">Membership</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="#" class="list-link">Contact</a>
+                    </li>
+                    <li class="list-item screen-lg-hidden">
+                        <a href="#" class="list-link">Sign in</a>
+                    </li>
+                    <li class="list-item screen-lg-hidden">
+                        <a href="#" class="list-link">Sign up</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="list list-right">
+                <button class="btn place-items-center" id="theme-toggle-btn">
+                    <i class="ri-sun-line sun-icon"></i>
+                    <i class="ri-moon-line moon-icon"></i>
+                </button>
+
+                <button class="btn place-items-center" id="search-icon">
+                    <i class="ri-search-line"></i>
+                </button>
+
+                <button class="btn place-items-center screen-lg-hidden menu-toggle-icon" id="menu-toggle-icon">
+                    <i class="ri-menu-3-line open-menu-icon"></i>
+                    <i class="ri-close-line close-menu-icon"></i>
+                </button>
+
+                <a href="#" class="list-link screen-sm-hidden">Sign in</a>
+                <a href="#" class="list-link screen-sm-hidden btn sign-up-btn fancy-border">
+                    <span>Sign in</span>
+                </a>
+
+
+
+            </div>
+        </nav>
+    </header>
     <!-- Search -->
-
+    <div class="search-form-container container" id="search-form-container">
+        <div class="form-container-inner">
+            <form action="" class="form">
+                <input  class="form-input" type="text" placeholder="What are you looking for?">
+                <button  class="btn form-btn" type="submit">
+                    <i class="ri-search-line"></i>
+                </button>
+            </form>
+            <span class="form-note">Or press ESC to close.</span>
+        </div>        
+        <button class="btn form-close-btn place-items-center" id="form-close-btn">
+            <i class="ri-close-line"></i>
+        </button>
+    </div>
     <!-- Featured articles -->
-    
+    <section class="featured-articles section-header-offset">
+        <div class="featured-articles-container container d-grid">
+            <div class="featured-content d-grid">
+                <div class="headline-banner">
+                    <h3 class="headline fancy-border">
+                        <span class="place-items-center">Breaking News</span>
+                    </h3>
+                    <span class="headline-description">Apple announces a new partnership...</span>
+                </div>
+
+                <a href="#" class="article featured-article featured-article-1">
+                    <img src="assets/images/featured/featured-1.jpg" alt="">
+                    <span class="article-category">Technology</span>
+
+                    <div class="article-data-container">
+
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red </span>
+                        </div>
+
+                        <h3 class="title article title">Is VR the future?</h3>
+                    </div>
+                </a>
+                <a href="#" class="article featured-article featured-article-2">
+                    <img src="assets/images/featured/featured-2.jpg" alt="">
+                    <span class="article-category">Technology</span>
+
+                    <div class="article-data-container">
+
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red </span>
+                        </div>
+
+                        <h3 class="title article title">Is VR the future?</h3>
+                    </div>
+                </a>
+                <a href="#" class="article featured-article featured-article-3">
+                    <img src="assets/images/featured/featured-3.jpg" alt="">
+                    <span class="article-category">Technology</span>
+
+                    <div class="article-data-container">
+
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red </span>
+                        </div>
+
+                        <h3 class="title article title">Is VR the future?</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
     <!-- Quick read -->
 
     <!-- Older posts -->
